// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DappRequestContent - Stale Request Rendering > should match snapshot for fresh request 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _mb-t-space-spa94665589 _ml-t-space-spa94665593 _mt-t-space-spa94665593 _mr-t-space-spa94665593 _pr-t-space-spa1360334080 _pl-t-space-spa1360334080"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa94665593"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _height-40px _width-40px"
        >
          <div
            class="_display-flex _alignItems-center _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-1 _flexDirection-row _justifyContent-center _flexGrow-1 _backgroundColor-F7FEEB35 _borderTopLeftRadius-t-radius-ro1041013639 _borderTopRightRadius-t-radius-ro1041013639 _borderBottomRightRadius-t-radius-ro1041013639 _borderBottomLeftRadius-t-radius-ro1041013639 _maxHeight-40px _width-40px _aspectRatio-1"
            data-testid="dapp-icon-placeholder"
          >
            <span
              class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-00C3A035 _fontFamily-f-family _wordWrap-break-word _textAlign-center _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
              data-disable-theme="true"
            >
              E
            </span>
          </div>
        </div>
        <span
          class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          Transaction request
        </span>
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa94665587"
        >
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-t-space-spa94665589 _alignItems-center"
          >
            <div
              fill="none"
              stroke-width="8"
              style="width: 16px; height: 16px; margin-right: 4px; color: rgba(19, 19, 19, 0.63);"
              viewbox="0 0 16 16"
            >
              <div
                d="M4.12251 8.5625C4.23501 10.8725 5.01501 13.2275 6.37251 15.32C3.19251 14.615 0.770022 11.8925 0.522522 8.5625H4.12251ZM6.37251 0.679993C3.19251 1.38499 0.770022 4.1075 0.522522 7.4375H4.12251C4.23501 5.1275 5.01501 2.77249 6.37251 0.679993ZM8.15003 0.5H7.85001L7.62502 0.822495C6.20002 2.84749 5.36751 5.1725 5.24751 7.4375H10.7525C10.6325 5.1725 9.80002 2.84749 8.37502 0.822495L8.15003 0.5ZM5.24751 8.5625C5.36751 10.8275 6.20002 13.1525 7.62502 15.1775L7.85001 15.5H8.15003L8.37502 15.1775C9.80002 13.1525 10.6325 10.8275 10.7525 8.5625H5.24751ZM11.8775 8.5625C11.765 10.8725 10.985 13.2275 9.62753 15.32C12.8075 14.615 15.23 11.8925 15.4775 8.5625H11.8775ZM15.4775 7.4375C15.23 4.1075 12.8075 1.38499 9.62753 0.679993C10.985 2.77249 11.765 5.1275 11.8775 7.4375H15.4775Z"
                fill="currentColor"
              />
            </div>
            <div
              class="is_TouchableArea  t_group_true"
              role="button"
              style="display: flex; align-items: stretch; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 0; flex-direction: column; border-top-left-radius: var(--t-radius-rounded12); border-top-right-radius: var(--t-radius-rounded12); border-bottom-right-radius: var(--t-radius-rounded12); border-bottom-left-radius: var(--t-radius-rounded12); cursor: pointer; outline-color: rgba(0, 0, 0, 0); opacity: 1; transform: scale(1);"
              tabindex="0"
            >
              <div
                class="_color-_grouptrue-hover_accent3Hove112785 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589 _justifyContent-flex-start _color-accent3"
              >
                <span
                  class="font_button _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _flexShrink-1 _fontSize-f-size-micr111 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1263414315"
                  data-disable-theme="true"
                  style="color: rgba(19, 19, 19, 0.63);"
                >
                  example.com
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 0; flex-direction: column; transition: all 200ms ease-in-out;"
    />
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa94665593 _mt-t-space-spa94665593 _pr-t-space-spa1360334080 _pl-t-space-spa1360334080"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-t-space-spa1360334080"
      >
        <button
          class="is_Button  t_group_item"
          data-testid="cancel"
          dd-action-name="Cancel"
          style="display: flex; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; flex-basis: 1px; outline-color: rgba(0, 0, 0, 0); border-top-left-radius: var(--t-radius-rounded16); border-top-right-radius: var(--t-radius-rounded16); border-bottom-right-radius: var(--t-radius-rounded16); border-bottom-left-radius: var(--t-radius-rounded16); gap: var(--t-space-spacing8); border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: scale(1); transition: transform 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
        >
          <span
            class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
            line-height-disabled="false"
          >
            Cancel
          </span>
        </button>
        <button
          class="is_Button  t_group_item"
          data-testid="confirm"
          dd-action-name="Confirm"
          style="display: flex; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; flex-basis: 1px; outline-color: rgba(0, 0, 0, 0); border-top-left-radius: var(--t-radius-rounded16); border-top-right-radius: var(--t-radius-rounded16); border-bottom-right-radius: var(--t-radius-rounded16); border-bottom-left-radius: var(--t-radius-rounded16); gap: var(--t-space-spacing8); border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: scale(1); transition: transform 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
        >
          <span
            class="font_button _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-white _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
            line-height-disabled="false"
          >
            Confirm
          </span>
        </button>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`DappRequestContent - Stale Request Rendering > should match snapshot for stale request 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _mb-t-space-spa94665589 _ml-t-space-spa94665593 _mt-t-space-spa94665593 _mr-t-space-spa94665593 _pr-t-space-spa1360334080 _pl-t-space-spa1360334080"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa94665593"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _height-40px _width-40px"
        >
          <div
            class="_display-flex _alignItems-center _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-1 _flexDirection-row _justifyContent-center _flexGrow-1 _backgroundColor-F7FEEB35 _borderTopLeftRadius-t-radius-ro1041013639 _borderTopRightRadius-t-radius-ro1041013639 _borderBottomRightRadius-t-radius-ro1041013639 _borderBottomLeftRadius-t-radius-ro1041013639 _maxHeight-40px _width-40px _aspectRatio-1"
            data-testid="dapp-icon-placeholder"
          >
            <span
              class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-00C3A035 _fontFamily-f-family _wordWrap-break-word _textAlign-center _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
              data-disable-theme="true"
            >
              E
            </span>
          </div>
        </div>
        <span
          class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          Transaction request
        </span>
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa94665587"
        >
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-t-space-spa94665589 _alignItems-center"
          >
            <div
              fill="none"
              stroke-width="8"
              style="width: 16px; height: 16px; margin-right: 4px; color: rgba(19, 19, 19, 0.63);"
              viewbox="0 0 16 16"
            >
              <div
                d="M4.12251 8.5625C4.23501 10.8725 5.01501 13.2275 6.37251 15.32C3.19251 14.615 0.770022 11.8925 0.522522 8.5625H4.12251ZM6.37251 0.679993C3.19251 1.38499 0.770022 4.1075 0.522522 7.4375H4.12251C4.23501 5.1275 5.01501 2.77249 6.37251 0.679993ZM8.15003 0.5H7.85001L7.62502 0.822495C6.20002 2.84749 5.36751 5.1725 5.24751 7.4375H10.7525C10.6325 5.1725 9.80002 2.84749 8.37502 0.822495L8.15003 0.5ZM5.24751 8.5625C5.36751 10.8275 6.20002 13.1525 7.62502 15.1775L7.85001 15.5H8.15003L8.37502 15.1775C9.80002 13.1525 10.6325 10.8275 10.7525 8.5625H5.24751ZM11.8775 8.5625C11.765 10.8725 10.985 13.2275 9.62753 15.32C12.8075 14.615 15.23 11.8925 15.4775 8.5625H11.8775ZM15.4775 7.4375C15.23 4.1075 12.8075 1.38499 9.62753 0.679993C10.985 2.77249 11.765 5.1275 11.8775 7.4375H15.4775Z"
                fill="currentColor"
              />
            </div>
            <div
              class="is_TouchableArea  t_group_true"
              role="button"
              style="display: flex; align-items: stretch; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 0; flex-direction: column; border-top-left-radius: var(--t-radius-rounded12); border-top-right-radius: var(--t-radius-rounded12); border-bottom-right-radius: var(--t-radius-rounded12); border-bottom-left-radius: var(--t-radius-rounded12); cursor: pointer; outline-color: rgba(0, 0, 0, 0); opacity: 1; transform: scale(1);"
              tabindex="0"
            >
              <div
                class="_color-_grouptrue-hover_accent3Hove112785 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589 _justifyContent-flex-start _color-accent3"
              >
                <span
                  class="font_button _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _flexShrink-1 _fontSize-f-size-micr111 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1263414315"
                  data-disable-theme="true"
                  style="color: rgba(19, 19, 19, 0.63);"
                >
                  example.com
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 0; flex-direction: column; transition: all 200ms ease-in-out;"
    />
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa94665593 _mt-t-space-spa94665593 _pr-t-space-spa1360334080 _pl-t-space-spa1360334080"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _backgroundColor-statusWarni108953 _gap-t-space-spa94665593 _pr-t-space-spa1360334080 _pl-t-space-spa1360334080 _pt-t-space-spa94665593 _pb-t-space-spa94665593 _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _mt-t-space-spa94665593 _mb-t-space-spa94665593"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _height-t-size-spac100347300 _width-t-size-spac100347300"
        >
          <div
            fill="currentColor"
            stroke-width="8"
            style="width: 24px; height: 24px; color: rgb(153, 111, 1);"
            viewbox="0 0 24 24"
          >
            <div
              d="M21.6074 17.1522L15.0004 4.79599C13.7204 2.40199 10.2814 2.40199 9.00042 4.79599L2.39349 17.1522C1.21949 19.3482 2.81353 22.0001 5.30853 22.0001H18.6923C21.1863 22.0001 22.7814 19.3472 21.6074 17.1522ZM11.2504 10.0001C11.2504 9.58609 11.5864 9.25009 12.0004 9.25009C12.4144 9.25009 12.7504 9.58609 12.7504 10.0001V14.0001C12.7504 14.4141 12.4144 14.7501 12.0004 14.7501C11.5864 14.7501 11.2504 14.4141 11.2504 14.0001V10.0001ZM12.0204 18.0001C11.4684 18.0001 11.0153 17.5521 11.0153 17.0001C11.0153 16.4481 11.4584 16.0001 12.0104 16.0001H12.0204C12.5734 16.0001 13.0204 16.4481 13.0204 17.0001C13.0204 17.5521 12.5724 18.0001 12.0204 18.0001Z"
              fill="currentColor"
            />
          </div>
        </div>
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1269072494 _flexGrow-1 _flexShrink-1 _flexBasis-auto"
          data-disable-theme="true"
        >
          This request has expired due to inactivity. Please try submitting again
        </span>
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-t-space-spa1360334080"
      >
        <button
          class="is_Button  t_group_item"
          data-testid="cancel"
          dd-action-name="Close"
          style="display: flex; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; flex-basis: 1px; outline-color: rgba(0, 0, 0, 0); border-top-left-radius: var(--t-radius-rounded16); border-top-right-radius: var(--t-radius-rounded16); border-bottom-right-radius: var(--t-radius-rounded16); border-bottom-left-radius: var(--t-radius-rounded16); gap: var(--t-space-spacing8); border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: scale(1); transition: transform 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
        >
          <span
            class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
            line-height-disabled="false"
          >
            Close
          </span>
        </button>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;
